--- a/OnlineTutor2/Views/Shared/_Layout.cshtml
+++ b/OnlineTutor2/Views/Shared/_Layout.cshtml
@@ -57,7 +57,7 @@
                                         <li><hr class="dropdown-divider"></li>
                                         <li>
                                             <a href="#" class="dropdown-item">
-                                                <i class="fas fa-chart-line"></i> Успеваемость
+                                                <i class="fas fa-chart-line"></i> Результаты
                                             </a>
                                         </li>
                                         <li>
