--- a/OnlineTutor2/Views/Teacher/Index.cshtml
+++ b/OnlineTutor2/Views/Teacher/Index.cshtml
@@ -92,12 +92,12 @@
     <div class="col-4 col-md-4 mb-3 mb-md-4">
         <div class="card teacher-card h-100">
             <div class="card-header">
-                <h5 class="card-title mb-0">Успеваемость</h5>
+                <h5 class="card-title mb-0">Результаты</h5>
             </div>
             <div class="card-body d-flex flex-column">
                 <p class="card-text d-none d-md-block">Анализ успеваемости учеников и классов</p>
                 <a href="#" class="btn btn-primary mt-auto w-100">
-                    <i class="fas fa-chart-line"></i> <span class="d-none d-sm-inline">Успеваемость</span>
+                    <i class="fas fa-chart-line"></i> <span class="d-none d-sm-inline">Результаты</span>
                 </a>
             </div>
         </div>
