--- a/OnlineTutor2/Views/Account/Profile.cshtml
+++ b/OnlineTutor2/Views/Account/Profile.cshtml
@@ -167,7 +167,7 @@
                 <div class="card shadow">
                     <div class="card-header bg-white">
                         <h5 class="mb-0">
-                            <i class="fas fa-chart-line"></i> Моя успеваемость
+                            <i class="fas fa-chart-line"></i> Мои результаты
                         </h5>
                     </div>
                     <div class="card-body">
