fix class delete view

--- a/OnlineTutor2/Views/Class/Delete.cshtml
+++ b/OnlineTutor2/Views/Class/Delete.cshtml
@@ -14,7 +14,7 @@
             <div class="card-body">
                 <div class="alert alert-warning">
                     <i class="fas fa-warning"></i>
-                    <strong>Внимание!</strong> Вы собираетесь удалить класс. Это действие нельзя отменить.
+                    <strong>Внимание!</strong> Это действие нельзя отменить.
                 </div>
 
                 <h5>Вы действительно хотите удалить этот класс?</h5>
@@ -64,7 +64,7 @@
                         @if (!Model.Students.Any())
                         {
                             <button type="submit" class="btn btn-danger">
-                                <i class="fas fa-trash"></i> Да, удалить класс
+                                <i class="fas fa-trash"></i> Удалить
                             </button>
                         }
                     </div>
