fix studentTest result view

--- a/OnlineTutor2/Views/StudentTest/Result.cshtml
+++ b/OnlineTutor2/Views/StudentTest/Result.cshtml
@@ -262,7 +262,7 @@
                                     {
                                         <i class="fas fa-check-circle text-success fa-2x"></i>
                                         <div class="mt-1">
-                                            <small class="badge bg-success">+@question.Points</small>
+                                            <small class="badge bg-success">@question.Points</small>
                                         </div>
                                     }
                                     else
