fix history view

--- a/OnlineTutor2/Views/StudentTest/History.cshtml
+++ b/OnlineTutor2/Views/StudentTest/History.cshtml
@@ -161,7 +161,7 @@ else
                             <th class="d-none d-md-table-cell" style="width: 15%;">Дата</th>
                             <th class="mobile-visible text-center" style="width: 12%;">
                                 <span class="d-none d-md-inline">Попытка</span>
-                                <span class="d-md-none">Поп.</span>
+                                <span class="d-md-none">Попытка</span>
                             </th>
                             <th class="mobile-visible text-center" style="width: 15%;">Результат</th>
                             <th class="d-none d-md-table-cell text-center" style="width: 10%;">Время</th>
@@ -251,7 +251,7 @@ else
                             <th class="d-none d-md-table-cell" style="width: 15%;">Дата</th>
                             <th class="mobile-visible text-center" style="width: 12%;">
                                 <span class="d-none d-md-inline">Попытка</span>
-                                <span class="d-md-none">Поп.</span>
+                                <span class="d-md-none">Попытка</span>
                             </th>
                             <th class="mobile-visible text-center" style="width: 15%;">Результат</th>
                             <th class="d-none d-md-table-cell text-center" style="width: 10%;">Время</th>
@@ -341,7 +341,7 @@ else
                             <th class="d-none d-md-table-cell" style="width: 15%;">Дата</th>
                             <th class="mobile-visible text-center" style="width: 12%;">
                                 <span class="d-none d-md-inline">Попытка</span>
-                                <span class="d-md-none">Поп.</span>
+                                <span class="d-md-none">Попытка</span>
                             </th>
                             <th class="mobile-visible text-center" style="width: 15%;">Результат</th>
                             <th class="d-none d-md-table-cell text-center" style="width: 10%;">Время</th>
@@ -432,7 +432,7 @@ else
                             <th class="d-none d-md-table-cell" style="width: 15%;">Дата</th>
                             <th class="mobile-visible text-center" style="width: 12%;">
                                 <span class="d-none d-md-inline">Попытка</span>
-                                <span class="d-md-none">Поп.</span>
+                                <span class="d-md-none">Попытка</span>
                             </th>
                             <th class="mobile-visible text-center" style="width: 15%;">Результат</th>
                             <th class="d-none d-md-table-cell text-center" style="width: 10%;">Время</th>
